added zipmapfunction